--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^1.2.0
+  dio: ^3.0.9
+  html: ^0.14.0+3
+  provider: ^4.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
